fixtures/frontend/milestone-2/invalid/unfinished-recurrence/main.aivi
val broken =
    0
     @|> 1
